# qsotools

./: .gitignore  LICENSE  README.md  requirements.txt  requirements.yml  requirements_extra.txt  setup.cfg  setup.py
etc/: kodiaqviewer.py
etc/notebooks/: AnalyzingLognMockPower.ipynb  KODIAQViewerFigWid.ipynb  PlottingQMLEResults.ipynb  PropertiesKODIAQSpectra.ipynb
notebooks/: AnalyzingLognMockPower.ipynb  PlottingQMLEResults.ipynb  PropertiesKODIAQSpectra.ipynb  SpectrographResolution.ipynb
py/qsotools/: __init__.py  alluse.mplstyle  desi_plotting.py  fiducial.py  io.py  kodiaqio.py  kodiaqviewer.py  metals.py  mocklib.py  p1d_measurements.py  plotter.py  qmle_simulator.py  qsonic_plotting.py  reconstruct.py  specops.py  utils.py  xq100io.py
py/qsotools/io/: binary_qso.py  kodiaq.py  kodiaqviewer.py  spectrum.py
py/qsotools/p1d-measurements/: karacayli23_desi-edrp-lyasb1subt-p1d-summary-results.txt  walther_metalmasked_power_table5.tsv  xq100_irsic2017_pk_xs_final.txt
py/qsotools/scripts/: bootstrapQMLE.py  bootstrapQMLEChunk.py  checkConfigQMLE.py  computeLognMeanFlux.py  computeLognPower.py  convertBQ2QQFits.py  convertFlux2Fluctuations.py  convertFpbin2FITS.py  estOptimalPDF.py  estP1D_FFT.py  estXi1D.py  est_kde_pdf.py  fitPD13LorentzSiIII.py  genKXUMocks.py  generate_mocks.py  getLists4QMLEfromPICCA.py  jackknifeQMLEChunk.py  reduceQQMocks.py  regularizeBootstrapCov.py
py/qsotools/tables/: desi_nz_qso.dat.txt  desi_nz_qso_bdt.dat.txt  (+7 more)
tables/: desi_nz_qso_cut.dat.txt  kodiaq_asu.tsv  master_kodiaq_table.tsv  suzuki_et_al_2005_x_matrix.txt
(+3 files in other folders)
