[bumpversion]
current_version = 2.5.19
commit = True
tag = True

[bumpversion:file:py/qsotools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = qsotools
version = attr: qsotools.__version__
author = Naim Goksel Karacayli
author_email = ngokselk@gmail.com
description = Python scripts to generate mock Lyman-alpha forest, read & reduce quasar spectra from KODIAQ, XQ-100 & SQUAD.
license = MIT

[options]
package_dir = 
	=py
packages = find_namespace:
include_package_data = True
python_requires = >=3.7, <3.11
install_requires = file: requirements.txt

[options.packages.find]
where = py

[options.package_data]
qsotools = 
	tables/*
	p1d-measurements/*
	alluse.mplstyle

[options.entry_points]
console_scripts = 
	newGenDESILiteMocks = qsotools.scripts.generate_mocks:main
	getLists4QMLEfromPICCA = qsotools.scripts.getLists4QMLEfromPICCA:main
	bootstrapQMLE = qsotools.scripts.bootstrapQMLE:main
	jackknifeQMLEChunk = qsotools.scripts.jackknifeQMLEChunk:main
	regularizeBootstrapCov = qsotools.scripts.regularizeBootstrapCov:main
	estXi1D = qsotools.scripts.estXi1D:main
	estP1D-FFT = qsotools.scripts.estP1D_FFT:main
	estFPDF-KDE = qsotools.scripts.est_kde_pdf:main
